# docs/swagger.yaml
@@ -1,10 +1,16 @@
 basePath: /
 definitions:
-  addsong.Request:
+  addsong.FullData:
     description: Структура запроса с данными песни.
     properties:
       data:
         $ref: '#/definitions/models.Data'
+    type: object
+  addsong.RequestSongAndGroup:
+    description: Структура запроса с данными группы и песни.
+    properties:
+      song:
+        $ref: '#/definitions/models.SongAndGroup'
     type: object
   get_all_data.Response:
     description: Структура ответа с данными песен.
@@ -49,6 +55,13 @@ definitions:
       text:
         type: string
     type: object
+  models.SongAndGroup:
+    properties:
+      group:
+        type: string
+      song:
+        type: string
+    type: object
   update_song.Request:
     description: Структура запроса с данными песни.
     type: object
@@ -78,14 +91,14 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/addsong.Request'
+          $ref: '#/definitions/addsong.RequestSongAndGroup'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/addsong.Request'
+            $ref: '#/definitions/addsong.FullData'
         "400":
           description: failed to decode req-body
           schema:
